.env seems like a pain for a json problem, let's make users write json and give an example of the file in the readme

--- a/pm2.config.json
+++ b/pm2.config.json
@@ -3,8 +3,7 @@
     {
       "name": "einaut",
       "cwd": ".",
-      "script": "./dist/index.js",
-      "node_args": "-r dotenv/config"
+      "script": "./dist/index.js"
     }
   ]
 }
