--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "concurrently": "^5.3.0",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "sqlite3": "^5.0.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.3",
+    "@types/sqlite3": "^3.1.6",
     "pm2": "^4.5.0"
   }
 }
